<resources>
    <string name="app_name">Hacker News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top">Top</string>
    <string name="the_best">The Best</string>
    <string name="new_news">New</string>
    <string name="by">by</string>
    <string name="points">points</string>
    <string name="comments">comments</string>
    <string name="line">|</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="no_comments_yet">No comments yet!</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="no_results_found_try_different_keyword">No news found. Try with different keyword.</string>
    <string name="favourite">Favourite</string>
    <string name="there_are_no_favourite_news_yet">There are no favourite news yet.</string>
    <string name="search_for_news">Search for news.</string>
</resources>
