<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_news"
        android:icon="@drawable/ic_news"
        android:title="@string/news"
        android:fontFamily="sans-serif-light"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:fontFamily="sans-serif-light"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_favourite"
        android:title="@string/favourite"
        android:fontFamily="sans-serif-light"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>