<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/hacker_news_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/hacker_news_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarTop"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-light"
            android:background="@color/lightYellow"
            app:title="Hacker News"
            app:titleTextAppearance="@style/Toolbar.TitleText"
            app:titleTextColor="@color/titleColor" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/tab_layout_hacker_news"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/lightYellow"
        android:fontFamily="sans-serif-light"
        app:layout_constraintTop_toBottomOf="@id/hacker_news_app_bar"
        app:tabSelectedTextColor="@android:color/background_light"
        app:tabTextColor="@color/tabText">

        <android.support.design.widget.TabItem
            android:id="@+id/new_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_news" />

        <android.support.design.widget.TabItem
            android:id="@+id/top_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/top" />

        <android.support.design.widget.TabItem
            android:id="@+id/the_best_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_best" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/hacker_news_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tab_layout_hacker_news" />

</android.support.constraint.ConstraintLayout>