<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/row_item"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@color/lightOrange">

    <TextView
        android:id="@+id/news_row_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        android:text="Title"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/news_row_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/news_row_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="Score"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="@string/points"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/news_row_score"
        app:layout_constraintStart_toEndOf="@+id/news_row_score"
        app:layout_constraintTop_toTopOf="@+id/news_row_score"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="@string/by"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/score"
        app:layout_constraintStart_toEndOf="@+id/score"
        app:layout_constraintTop_toTopOf="@+id/score"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/news_row_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:padding="3dp"
        android:text="Author"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/by" />

    <TextView
        android:id="@+id/news_row_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="Type"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/line"
        app:layout_constraintTop_toTopOf="@+id/line"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="@string/line"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/news_row_comments"
        app:layout_constraintEnd_toStartOf="@+id/news_row_comments"
        app:layout_constraintTop_toTopOf="@+id/news_row_comments"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/news_row_comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="Comments"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/comments"
        app:layout_constraintEnd_toStartOf="@+id/comments"
        app:layout_constraintTop_toTopOf="@+id/comments"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/comments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="4dp"
        android:text="@string/comments"
        android:textAlignment="viewStart"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"></View>

</android.support.constraint.ConstraintLayout>
